// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options Component div 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options Component fieldset 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableGutters false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableGutters true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableMargin false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disableMargin true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disablePadding false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options disablePadding true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-divider css-cp1sa0-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-16twzsx"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-c5pdtz-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options elevation 2 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-z4i9t5-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options fullWidth false 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options fullWidth true 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options icon favorite 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
          >
            favorite
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
        >
          <span
            aria-hidden="true"
            class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
          >
            person
          </span>
        </div>
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options layout horizontal 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-10au80u"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with form options layout vertical 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <ul
    class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
  >
    <div
      class="MuiBox-root css-rwzwky"
    />
  </ul>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-konndc-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-r17q5p-MuiTypography-root"
          >
            description
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1lskhvk-MuiPaper-root"
  >
    <ul
      class="MuiList-root MuiList-dense css-183iplg-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-18tjoje-MuiListItem-root"
      >
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap MuiListItemText-primary css-1udidiq-MuiTypography-root"
          >
            title
          </span>
        </div>
      </li>
      <div
        class="MuiBox-root css-rwzwky"
      />
    </ul>
  </div>
</div>
`;
